--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L.A. Spinetta</title>
+    <title>Spinetta: Inicio</title>
 </head>
 <body>
-    <h1 align=center>Luis Alberto Spinetta</h1>
+    <h1 align=center><i>Luis Alberto Spinetta</i></h1>
+    <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
+        <tr>
+            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Archivos\Nueva carpeta\.vscode\Página Web Spinetta\iniciofoto.png" width=200px height=auto></td>
+            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Archivos\Nueva carpeta\.vscode\Página Web Spinetta\biografiafoto.png" width=250px height=auto></td>
+            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Archivos\Nueva carpeta\.vscode\Página Web Spinetta\discografiafoto.png" width=300px height=auto></td>
+            <td>Galeria</td>
+            <td>Contacto</td>
+        </tr>
+    </table>
 </body>
 </html>
