imagenes de cambio de pagina

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
-            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Archivos\Nueva carpeta\.vscode\Página Web Spinetta\iniciofoto.png" width=200px height=auto></td>
-            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Archivos\Nueva carpeta\.vscode\Página Web Spinetta\biografiafoto.png" width=250px height=auto></td>
-            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Archivos\Nueva carpeta\.vscode\Página Web Spinetta\discografiafoto.png" width=300px height=auto></td>
-            <td>Galeria</td>
-            <td>Contacto</td>
+            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\iniciofoto.png" width=250px height=auto></td>
+            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\biografiafoto.png" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\discografiafoto.png" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\galeriafoto.png" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\contactosfoto.png" width=300px height=auto></td>
         </tr>
     </table>
 </body>
