--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
-            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\iniciofoto.png" width=250px height=auto></td>
-            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\biografiafoto.png" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\discografiafoto.png" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\galeriafoto.png" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\contactosfoto.png" width=300px height=auto></td>
+            <td width=210px height=auto><a href="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\index.html"></a><img align=left src="https://imgur.com/NjHg60A" width=250px height=auto></a></td>
+            <td width=210px height=auto><img align=left src="https://imgur.com/9cgdK95" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://imgur.com/qh3B8VC" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://imgur.com/MBJBYwC" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://imgur.com/k5CXvBD" width=300px height=auto></td>
         </tr>
     </table>
 </body>
