--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
-            <td width=210px height=auto><a href="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\index.html"></a><img align=left src="https://imgur.com/NjHg60A" width=250px height=auto></a></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/iniciofoto.png?raw=true" width=250px height=auto></td>
             <td width=210px height=auto><img align=left src="https://imgur.com/9cgdK95" width=300px height=auto></td>
             <td width=210px height=auto><img align=left src="https://imgur.com/qh3B8VC" width=300px height=auto></td>
             <td width=210px height=auto><img align=left src="https://imgur.com/MBJBYwC" width=300px height=auto></td>
