--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
             <td width=210px height=auto><a href="https://januchu.github.io/Spinetta/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/iniciofoto.png?raw=true" width=250px height=auto></a></td>
-            <td width=210px height=auto><img align=left src="https://imgur.com/9cgdK95" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="https://imgur.com/qh3B8VC" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="https://imgur.com/MBJBYwC" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="https://imgur.com/k5CXvBD" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/biografiafoto.png?raw=true" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/discografiafoto.png?raw=true" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/galeriafoto.png?raw=true" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/contactosfoto.png?raw=true" width=300px height=auto></td>
         </tr>
     </table>
 </body>
