--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spinetta: Inicio</title>
 </head>
-<body>
+<body bgcolor=#E6E6E6>
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
@@ -17,5 +17,13 @@
             <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/contactosfoto.png?raw=true" width=300px height=auto></td>
         </tr>
     </table>
+    <h2 align=center>Introducción</h2>
+    <p align=center>El sitio web al que ha ingresado es parte de las asignaciones dadas para la clase de <mark>DISEÑO WEB</mark><br><br>Desarrollado por: </p>
+    <p align=center style="color:#C600FF";><b>Alejandro José Alfaro Romero</b></p>
+    <p align=center>Cuenta:</p>
+    <p align=center style="color:#F49900";><b>26</b></p>
+    <p align=center>Curso:</p>
+    <p align=center style="color:#20CE03";><b>12 de Bachillerato Técnico Profesional en Informática</b></p><br>
+    <p align=center style="color:#0A4BDF";><b><i>INSTITUTO MARISTA LA INMACULADA</i></b></p>
 </body>
 </html>
