--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <p align=center>Cuenta:</p>
     <p align=center style="color:#F49900";><b>26</b></p>
     <p align=center>Curso:</p>
-    <p align=center style="color:#20CE03";><b>12 de Bachillerato Técnico Profesional en Informática</b></p><br>
+    <p align=center style="color:#20CE03";><b>12 de Bachillerato Técnico Profesional en Informática</b></p>
     <p align=center style="color:#0A4BDF";><b><i>INSTITUTO MARISTA LA INMACULADA</i></b></p><center><img src="https://github.com/januchu/Spinetta/blob/master/monogramafoto.png?raw=true" align=center width=250px height=auto></center>
+    <p align=center><b>El tema a tratar en la página será la vida y obra del músico argentino Luis Alberto Spinetta</b></p>
 </body>
 </html>
