--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/iniciofoto.png?raw=true" width=250px height=auto></a></td>
-            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/biografiafoto.png?raw=true" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/discografiafoto.png?raw=true" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/galeriafoto.png?raw=true" width=300px height=auto></td>
-            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta/blob/master/contactosfoto.png?raw=true" width=300px height=auto></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta/"><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/iniciofoto.png?raw=true" width=250px height=auto></a></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/biografiafoto.png?raw=true" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/discografiafoto.png?raw=true" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/galeriafoto.png?raw=true" width=300px height=auto></td>
+            <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/contactosfoto.png?raw=true" width=300px height=auto></td>
         </tr>
     </table>
     <h2 align=center>Introducción</h2>
@@ -24,7 +24,7 @@
     <p align=center style="color:#F49900";><b>26</b></p>
     <p align=center>Curso:</p>
     <p align=center style="color:#20CE03";><b>12 de Bachillerato Técnico Profesional en Informática</b></p>
-    <p align=center style="color:#0A4BDF";><b><i>INSTITUTO MARISTA LA INMACULADA</i></b></p><center><img src="https://github.com/januchu/Spinetta/blob/master/monogramafoto.png?raw=true" align=center width=250px height=auto></center>
+    <p align=center style="color:#0A4BDF";><b><i>INSTITUTO MARISTA LA INMACULADA</i></b></p><center><img src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/monogramafoto.png?raw=true" align=center width=250px height=auto></center>
     <p align=center><b>El tema a tratar en la página será la vida y obra del músico argentino Luis Alberto Spinetta</b></p>
 </body>
 </html>
