--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta/"><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/iniciofoto.png?raw=true" width=250px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Index/"><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/iniciofoto.png?raw=true" width=250px height=auto></a></td>
             <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/biografiafoto.png?raw=true" width=300px height=auto></td>
             <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/discografiafoto.png?raw=true" width=300px height=auto></td>
             <td width=210px height=auto><img align=left src="https://github.com/januchu/Spinetta_Index/blob/master/Im%C3%A1genes/galeriafoto.png?raw=true" width=300px height=auto></td>
