--- a/Contactos/index.html
+++ b/Contactos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spinetta: Inicio</title>
+    <title>Spinetta: Contactos</title>
 </head>
 <body bgcolor=#E6E6E6>
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
