--- a/Contactos/index.html
+++ b/Contactos/index.html
@@ -17,14 +17,45 @@
             <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Conta/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/contactosfoto.png?raw=true" width=300px height=auto></a></td>
         </tr>
     </table>
-    <h2 align=center>Introducción</h2>
-    <p align=center>El sitio web al que ha ingresado es parte de las asignaciones dadas para la clase de <mark>DISEÑO WEB</mark><br><br>Desarrollado por: </p>
-    <p align=center style="color:#C600FF";><b>Alejandro José Alfaro Romero</b></p>
-    <p align=center>Cuenta:</p>
-    <p align=center style="color:#F49900";><b>26</b></p>
-    <p align=center>Curso:</p>
-    <p align=center style="color:#20CE03";><b>12 de Bachillerato Técnico Profesional en Informática</b></p>
-    <p align=center style="color:#0A4BDF";><b><i>INSTITUTO MARISTA LA INMACULADA</i></b></p><center><img src="https://github.com/januchu/Spinetta/blob/master/monogramafoto.png?raw=true" align=center width=250px height=auto></center>
-    <p align=center><b>El tema a tratar en la página será la vida y obra del músico argentino Luis Alberto Spinetta</b></p>
+    <h2 align=center>¿Quiere aportar Información? Contactenos</h2>
+    <center>
+        <font color="#000000">
+            <form>
+                <label for="edad">Edad:</label>
+                <input type="number" name="edad" id="edad" min="0" max="110" step="1"><br><br>
+                <label for="fecha">Fecha de Nacimiento</label>
+                <input type="date" name="fecha" id="fecha"><br><br>
+                <label for="NOMBRE" method= "get">Nombre</label> <br><br>
+                <input type="text" name="NOMBRE" id="NOMBRE"
+                placeholder="Alejandro José"><br> <br>
+                <label for="APELLIDO">Apellido</label><br><br>
+                <input type="text" name="APELLIDO" id="APELLIDO"
+                placeholder="Alfaro Romero"><br><br>
+                <label for="NOMBRE">País</label><br><br>
+                <input type="text" name="NOMBRE" id="NOMBRE"
+                placeholder="Honduras"><br><br>
+                <label for="NOMBRE">Dirección</label><br><br>
+                <input type="text" name="NOMBRE" id="NOMBRE"
+                placeholder="Bo./Col./Res."><br><br>
+                <label for="NOMBRE">¿qué te pareció la página de Spinetta?</label><br><br>
+                <input type="text" name="NOMBRE" id="NOMBRE"
+                placeholder="Buena, Mala, Promedio, No sé"><br><br>
+                <label for="NOMBRE">¿Cuál de sus bandas te gustó más?</label><br><br>
+                <input type="text" name="NOMBRE" id="NOMBRE"
+                placeholder="Almendra, Invisible, Solitario... "><br><br>
+                <label for="NOMBRE">¿Qué álbum/canción te gustó más?</label><br><br>
+                <input type="text" name="NOMBRE" id="NOMBRE"
+                placeholder="Credulidad, A 18' del Sol..."><br><br>
+                <p>Sexo:</p>
+                <label for="femenino">Femenino</label>
+                <input type="radio" name="Sexo" id="Femenino"value="F">
+                <label for="masculino">Masculino</label>
+                <input type="radio" name="Sexo" id="Masculino"value="M">
+                <input type="submit" value="ENVIAR RESPUESTAS">
+                <input type="reset" value="Cancelar">
+                <input type="hidden" name="fecha" id="fecha" value="2021-03-15">
+            </form>
+        </font>
+    </center>
 </body>
 </html>
