--- a/Discografía/index.html
+++ b/Discografía/index.html
@@ -10,11 +10,10 @@
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Ini/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/iniciofoto.png?raw=true" width=250px height=auto></a></td>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Bio/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/biografiafoto.png?raw=true" width=300px height=auto></a></td>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Disco/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/discografiafoto.png?raw=true" width=300px height=auto></a></td>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Gale/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/galeriafoto.png?raw=true" width=300px height=auto></a></td>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Conta/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/contactosfoto.png?raw=true" width=300px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Ini/"><img align=left src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/iniciofoto.png?raw=true" width=250px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Bio/"><img align=left src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/biografiafoto.png?raw=true" width=300px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Disco/"><img align=left src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/discografiafoto.png?raw=true" width=300px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Conta/"><img align=left src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/contactosfoto.png?raw=true" width=300px height=auto></a></td>
         </tr>
     </table>
     <h4>Índice</h4>
@@ -98,7 +97,7 @@
     <table border cellpading=1 cellspacing=0>
         <tr>
             <td align=center>Lista de Temas</td>
-            <td rowspan=2><img src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\Imágenes\almendraI.jpg" width=550 height=500></td>
+            <td rowspan=2><img src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/almendraI.jpg?raw=true" width=550 height=500></td>
         </tr>
         <tr>
             <td rowspan=2>
@@ -127,7 +126,7 @@
     <table border cellpading=1 cellspacing=0>
         <tr>
             <td align=center>Lista de Temas</td>
-            <td rowspan=2><img src="C:\Users\Alejandro\Desktop\Página Web Spinetta\Imágenes\almendraii.JPG" width=550 height=500></td>
+            <td rowspan=2><img src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/almendraii.JPG?raw=true" width=550 height=500></td>
         </tr>
         <tr>
             <td rowspan=2>
@@ -172,7 +171,7 @@
         <table border cellpading=1 cellspacing=0>
             <tr>
                 <td align=center>Lista de Temas</td>
-                <td rowspan=2><img src="C:\Users\Alejandro\Desktop\Página Web Spinetta\Imágenes\elvain.jpg" width=550 height=500></td>
+                <td rowspan=2><img src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/elvain.jpg?raw=true" width=550 height=500></td>
             </tr>
             <tr>
                 <td rowspan=2>
@@ -201,7 +200,7 @@
         <table border cellpading=1 cellspacing=0>
             <tr>
                 <td align=center>Lista de Temas</td>
-                <td rowspan=2><img src="C:\Users\Alejandro\Desktop\Página Web Spinetta\Imágenes\desa.jpg" width=550 height=500></td>
+                <td rowspan=2><img src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/desa.jpg?raw=true" width=550 height=500></td>
             </tr>
             <tr>
                 <td rowspan=2>
@@ -229,7 +228,7 @@
         <table border cellpading=1 cellspacing=0>
             <tr>
                 <td align=center>Lista de Temas</td>
-                <td rowspan=2><img src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\Imágenes\almendraI.jpg" width=550 height=500></td>
+                <td rowspan=2><img src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/pesod.jpg?raw=true" width=550 height=500></td>
             </tr>
             <tr>
                 <td rowspan=2>
@@ -268,7 +267,7 @@
     <table border cellpading=1 cellspacing=0>
         <tr>
             <td align=center>Lista de Temas</td>
-            <td rowspan=2><img src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\Imágenes\almendraI.jpg" width=550 height=500></td>
+            <td rowspan=2><img src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/inviv.jpg?raw=true" width=550 height=500></td>
         </tr>
         <tr>
             <td rowspan=2>
@@ -301,7 +300,7 @@
     <table border cellpading=1 cellspacing=0>
         <tr>
             <td align=center>Lista de Temas</td>
-            <td rowspan=2><img src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\Imágenes\almendraI.jpg" width=550 height=500></td>
+            <td rowspan=2><img src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/durasab.jpg?raw=true" width=550 height=500></td>
         </tr>
         <tr>
             <td rowspan=2>
@@ -327,7 +326,7 @@
     <table border cellpading=1 cellspacing=0>
         <tr>
             <td align=center>Lista de Temas</td>
-            <td rowspan=2><img src="C:\Users\Alejandro\Desktop\Nueva carpeta (3)\.vscode\html\Página Web Spinetta\Imágenes\almendraI.jpg" width=550 height=500></td>
+            <td rowspan=2><img src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/eljap.jpeg?raw=true" width=550 height=500></td>
         </tr>
         <tr>
             <td rowspan=2>
