--- a/Contactos/index.html
+++ b/Contactos/index.html
@@ -10,11 +10,10 @@
     <h1 align=center><i>Luis Alberto Spinetta</i></h1>
     <table align=center border cellspacing=0 cellpading=1 bgcolor="#0002FF">
         <tr>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Ini/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/iniciofoto.png?raw=true" width=250px height=auto></a></td>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Bio/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/biografiafoto.png?raw=true" width=300px height=auto></a></td>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Disco/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/discografiafoto.png?raw=true" width=300px height=auto></a></td>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Gale/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/galeriafoto.png?raw=true" width=300px height=auto></a></td>
-            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Conta/"><img align=left src="https://github.com/januchu/Spinetta/blob/master/contactosfoto.png?raw=true" width=300px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Ini/"><img align=left src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/iniciofoto.png?raw=true" width=250px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Bio/"><img align=left src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/biografiafoto.png?raw=true" width=300px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Disco/"><img align=left src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/discografiafoto.png?raw=true" width=300px height=auto></a></td>
+            <td width=210px height=auto><a href="https://januchu.github.io/Spinetta_Conta/"><img align=left src="https://github.com/januchu/inicio/blob/master/Im%C3%A1genes/contactosfoto.png?raw=true" width=300px height=auto></a></td>
         </tr>
     </table>
     <h2 align=center>¿Quiere aportar Información? Contactenos</h2>
